Fix /etc/defatul/elasticsearch file

--- a/templates/elasticsearch.default.j2
+++ b/templates/elasticsearch.default.j2
@@ -1,13 +1,9 @@
-{% if ansible_memtotal_mb > 2048 %}
-ES_HEAP_SIZE={{ (ansible_memtotal_mb / 1024 / 2 + 1) | int }}g
+ES_HEAP_SIZE={{ (ansible_memtotal_mb / 2) | int }}m
 
 # Heap new generation
-ES_HEAP_NEWSIZE=1g
+ES_HEAP_NEWSIZE={{ (ansible_memtotal_mb * 0.4) | int }}m
 
 # Maximum number of open files, defaults to 65535.
-MAX_OPEN_FILES=655350
+MAX_OPEN_FILES={{ elasticsearch_max_open_files }}
 
 MAX_LOCKED_MEMORY=unlimited
-{% endif %}
-
-MAX_MAP_COUNT=262144
